# bSpector

./: Cargo.toml  LICENSE  README.md  package.json
crates/bspector/: Cargo.toml
crates/bspector/src/: artefact_shape.rs  cli.rs  error.rs  lib.rs  main.rs  risk_band.rs  scan.rs  scan_state.rs  strictness.rs  substrate_input.rs  taxonomy.rs
crates/bspector/tests/: artefact_shape.rs  cli.rs  error.rs  library_surface.rs  risk_band.rs  scan_state.rs  strictness.rs  substrate_input.rs  taxonomy.rs
crates/bspector/tests/common/: mod.rs
scripts/: public_voice_guard.sh
