[workspace]
members = ["crates/bspector"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/bvasilenko/bSpector"
readme = "README.md"

[workspace.dependencies]
thiserror = "2"
assert_cmd = "2"
predicates = "3"
proptest = "1"
serde_json = "1"
