[package]
name = "bspector"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Prompt lookup tool. Agent names a vulnerability pattern from a fixed list; bspector returns the prompt for that vulnerability pattern. The prompt tells the agent how to check the skill manifest for that vulnerability."
repository.workspace = true
readme = "../../README.md"

[lib]
name = "bspector"
path = "src/lib.rs"

[[bin]]
name = "bspector"
path = "src/main.rs"

[dependencies]
bsuite-core = { git = "https://github.com/bvasilenko/bsuite-core", branch = "main" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
thiserror.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
proptest.workspace = true
serde_json.workspace = true
